Removed row holding play-icons causing alignment bug

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,7 +3,7 @@
 * {
     padding: 0;
     margin: 0;
-    border: none;
+    border: 1px dotted orange;
 }
 
 body, 
@@ -33,7 +33,8 @@ font 222725 */
 /*--Navigation */
 #logo { 
     font-size: 5rem;
-    text-align: center;
+    text-align: right;
+    padding: 0;
 } 
  
 i,
@@ -42,7 +43,6 @@ i,
     color: #84a98c;
     background-color: #f9f9f9; 
     border: none; 
-    align: center;
 }
 
 /*-- Game Container */
@@ -92,7 +92,10 @@ footer {
 }
 
 /* Medium devices (tablets, 768px and up) */
-@media (min-width: 768px) {
+@media (max-width: 768px) {
+    #logo {
+        text-align: center;
+    }
 
 }
 
